--- a/First site.html
+++ b/First site.html
@@ -15,7 +15,7 @@
                       <img src="img/mini.jpg" alt="logo">
                     </a>
              </div>
-             <!-- .logo -->
+             <!-- /.logo -->
              <nav class="header-nav">
                  <a href="#">Главная</a>
                  <a href="#">Отзывы</a>
@@ -23,11 +23,95 @@
                  <a href="#">Контакты</a>
              </nav>
           </div>
-          <!-- .container -->
+          <!-- /.container -->
     </header>
-    <!-- .header -->
- <main id="main">
-    
- </main>
+    <!-- /.header -->
+    <main id="main">
+        <section class="standart-section products-wrap">
+            <div class="container">
+                <h3 class="section-title text-center text-uppercase">
+                    Новые товары
+                </h3>
+                <div class="row d-flex flex-wrap">
+                    <div class="col-4">
+                        <div class="product-item">
+                            <div class="product-date text-center justify-content-center flex-column">
+                                <span>сроки</span>
+                                <span>1 неделя</span>
+                            </div>
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="product-item">
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="product-item">
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="product-item">
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="product-item">
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="product-item">
+                            <a href="#" class="product-img text-center">
+                                <img src="img/demon.jpg" alt="Demon" style="max-width: 80%;">
+                            </a>
+                            <h6 class="product-title text-uppercase text-center">Demon</h6>
+                            <div class="product-price text-center">
+                                <span>2000руб.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /.standart-section products-wrap -->
+    </main>
 </body>
 </html>
